--- a/style.css
+++ b/style.css
@@ -104,7 +104,7 @@ input[type="search"]::-webkit-search-cancel-button {
     display: flex;
     align-items: center;
     justify-content: center;
-    margin: 16px 0 16px 0;
+    padding: 16px 0 16px 0;
 }
 
 .burguer-btn {
