--- a/style.css
+++ b/style.css
@@ -191,7 +191,7 @@ input[type="search"]::-webkit-search-cancel-button {
     display: flex;
     justify-content: end;
     align-items: center;
-    padding: 16px;
+    padding: 6px 15px 6px 0;
 }
 
 .truck-icon {
@@ -223,6 +223,7 @@ input[type="search"]::-webkit-search-cancel-button {
 
 .price {
     font-size: var(--price);
+    margin-right: 10px;
 }
 
 
