--- a/style.css
+++ b/style.css
@@ -64,17 +64,20 @@ no se xq puse 90% con 100% queda mejor
 .ml-search {
     outline: none;
     padding: 8px 0 8px 8px;
-    border: transparent;
     width: 100%;
     height: 32px;
     border-radius: 10px 0px 0px 10px;
 }
 
 .btn-search {
-    padding: 3px 3px 3px 0;
+    padding: 3px 2px;
     height: 32px;
-    border: #fff;
     border-radius: 0px 10px 10px 0px;
+}
+
+.ml-search, .btn-search {
+    background-color: #fff;
+    border: transparent;
 }
 
 .search-icon {
