--- a/style.css
+++ b/style.css
@@ -26,14 +26,17 @@
 body {
     font-family: 'Roboto', sans-serif;
     color: var(--darkblue);
-    background-color: #ebebeb;
+    height: 100vh;
+    display: flex;
+    flex-direction: column;
 }
 
-/* main {
-    width: 90%;
+main {
+    display: flex;
+    flex-direction: column;
+    background-color: var(--lightgrey);
+    padding-bottom: 80px;
 }
-no se xq puse 90% con 100% queda mejor
- */
 
 
 /* ---   HEADER   --- */
@@ -260,9 +263,15 @@ input[type="search"]::-webkit-search-cancel-button {
     justify-content: center;
     text-align: center;
 }
+.footer-content {
+    width: 75%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
 
 .footer-info {
-    margin: 32px 16px;
+    margin: 32px 6px;
 }
 
 .footer-icon {
@@ -275,6 +284,7 @@ input[type="search"]::-webkit-search-cancel-button {
     font-size: var(--discount-descriptions);
     color: var(--darkgrey);
     font-weight: 600;
+    margin-bottom: 5px;
 }
 
 .text {
@@ -351,12 +361,31 @@ input[type="search"]::-webkit-search-cancel-button {
             width: 100%;
         }
 
+    /* FOOTER */
+    .footer-content {
+        width: 95%;
+        display: flex;
+        flex-direction: row;
+        justify-content: space-evenly;
+    }
+
+    .copyright-box {
+        margin-top: 15px;
+    }
 }
 
 
 /* DESKTOP*/
 @media (min-width: 1200px) { 
+/*     main {
+        flex-grow: 1;
+    } */
+
     .card {
         width: 20%;
+    }
+
+    .footer-content {
+        width: 80%;
     }
 }
