agregue los label a los input de las secciones intereses y comprar/vender y los acomode con row-reverse en register.css

--- a/register/register.css
+++ b/register/register.css
@@ -87,6 +87,7 @@ main fieldset form section article {
 }
 
 .form-buyer-seller, .interests-select {
+    flex-direction: row-reverse;
     color: var(--darkgrey);
     font-weight: 600;
 }
