--- a/register/register.css
+++ b/register/register.css
@@ -118,21 +118,16 @@ main fieldset form section article div input {
     justify-content: space-around;
 }
 
-.form-btn-rs, .to-home {
+.form-btn-rs {
     background-color: var(--lightblue);
     color: #fff;
     border: var(--lightblue);
     box-shadow: 0px 3px 5px 0px rgba(16,78,171,0.56);
-    width: 100%;
-}
-
-.to-home {
     width: 45%;
-    border-radius: 5px;
 }
 
 .form-btn-rs--right {
-    width: 45%;
+    margin-right: 10px;
 }
 
 /* ###  MEDIA QUERYS  ### */
