--- a/style.css
+++ b/style.css
@@ -150,7 +150,7 @@ input[type="search"]::-webkit-search-cancel-button {
 /*  ---   BANNER   ---  */
 
 .ml-banner {
-    width: 100vw;
+    width: 100%;
 }
 
 .title-cardbox {
@@ -168,7 +168,7 @@ input[type="search"]::-webkit-search-cancel-button {
 .card-box {
     display: flex;
     flex-wrap: wrap;
-    width: 100vw;
+    width: 100%;
     align-items: center;
     justify-content: center;
 }
@@ -300,7 +300,7 @@ input[type="search"]::-webkit-search-cancel-button {
 /* ### MEDIA QUERYS ### */
 
 /* MOBILE Y TABLET*/
-@media (max-width: 777px) { 
+@media (max-width: 777px) {
     .nav-link {
         font-size: .9rem;
     }
@@ -322,7 +322,7 @@ input[type="search"]::-webkit-search-cancel-button {
         margin: 0;
         display: flex;
         justify-content: flex-end;
-        padding-right: 40px;
+        padding-right: 20px;
     }
 
     .burguer {
@@ -348,8 +348,12 @@ input[type="search"]::-webkit-search-cancel-button {
         list-style-type: none;
     }
 
-    .nav-link {
+    .nav-item--right {
         margin-right: 20px;
+    }
+
+    .nav-item--left {
+        margin-left: 20px;
     }
 
     /* SECTION LAST VISIT */
