se agregó enimacion al camion, cambio de color en icons footer con hover en desktop version

--- a/style.css
+++ b/style.css
@@ -3,9 +3,9 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700;900&display=swap');
 
 :root {
-    --background-yellow: #EAC926;
+    --background-yellow: #eac926;
     --darkblue: #03264C;
-    --lightblue: #1259c3;
+    --lightblue: #1259c4;
     --darkgrey: #666;
     --lightgrey: #ebebeb;
     --green: #39b54a;
@@ -208,10 +208,6 @@ input[type="search"]::-webkit-search-cancel-button {
     font-size: 1.2rem;
 }
 
-.truck-icon:hover {
-    cursor: pointer;
-}
-
 /*   ---  PRICE & DISCOUNT BOX  ---   */
 
 .price-discount {
@@ -251,6 +247,7 @@ input[type="search"]::-webkit-search-cancel-button {
     padding: 8px 16px 20px;
     color: var(--darkgrey);
     font-weight: 500;
+    color: transparent;
 }
 
 
@@ -381,15 +378,33 @@ input[type="search"]::-webkit-search-cancel-button {
 
 /* DESKTOP*/
 @media (min-width: 1200px) { 
-/*     main {
-        flex-grow: 1;
-    } */
-
     .card {
         width: 20%;
+        box-shadow: none;
+    }
+
+    .card:hover {
+        box-shadow: 0px 0px 10px rgb(100, 100, 100);
+    }
+
+    .truck-icon {
+        transition: 1s;
+    }
+    
+    .truck-icon:hover {
+        cursor: pointer;
+        transform: rotate(360deg);
+    }
+
+    .card:hover .product-name {
+        color: var(--darkgrey);
     }
 
     .footer-content {
         width: 80%;
+    }
+
+    .footer-info:hover .footer-icon {
+        color: var(--darkblue);
     }
 }
